@@ -3,7 +3,11 @@ package com.czertainly.core.service.impl;
 import com.czertainly.api.exception.ValidationException;
 import com.czertainly.api.model.connector.notification.NotificationType;
 import com.czertainly.api.model.core.auth.Resource;
+import com.czertainly.api.model.core.logging.enums.AuditLogOutput;
 import com.czertainly.api.model.core.settings.*;
+import com.czertainly.api.model.core.settings.logging.AuditLoggingSettingsDto;
+import com.czertainly.api.model.core.settings.logging.LoggingSettingsDto;
+import com.czertainly.api.model.core.settings.logging.ResourceLoggingSettingsDto;
 import com.czertainly.core.dao.entity.Setting;
 import com.czertainly.core.dao.repository.SettingRepository;
 import com.czertainly.core.model.auth.ResourceAction;
@@ -11,6 +15,7 @@ import com.czertainly.core.security.authz.ExternalAuthorization;
 import com.czertainly.core.service.SettingService;
 import com.czertainly.core.util.SecretEncodingVersion;
 import com.czertainly.core.util.SecretsUtil;
+import com.czertainly.core.settings.SettingsCache;
 import com.fasterxml.jackson.core.JsonProcessingException;
 import com.fasterxml.jackson.core.type.TypeReference;
 import com.fasterxml.jackson.databind.ObjectMapper;
@@ -28,17 +33,29 @@ public class SettingServiceImpl implements SettingService {
     public static final String UTILS_SERVICE_URL_NAME = "utilsServiceUrl";
     public static final String NOTIFICATIONS_MAPPING_NAME = "notificationsMapping";
 
-    public static final String OAUTH2_PROVIDER_CATEGORY = "oauth2Provider";
+    public static final String LOGGING_AUDIT_LOG_OUTPUT_NAME = "output";
+    public static final String LOGGING_RESOURCES_NAME = "resources";
+
+    public static final String AUTHENTICATION_DISABLE_LOCALHOST_NAME = "disableLocalhostUser";
 
     private static final Logger logger = LoggerFactory.getLogger(SettingServiceImpl.class);
 
-    private SettingRepository settingRepository;
+    private final ObjectMapper mapper;
+    private final SettingsCache settingsCache;
+    private final SettingRepository settingRepository;
 
     private final ObjectMapper objectMapper = new ObjectMapper();
 
     @Autowired
-    public void setSettingRepository(SettingRepository settingRepository) {
+    public SettingServiceImpl(SettingsCache settingsCache, SettingRepository settingRepository, ObjectMapper mapper) {
+        this.mapper = mapper;
+        this.settingsCache = settingsCache;
         this.settingRepository = settingRepository;
+
+        settingsCache.cacheSettings(SettingsSection.PLATFORM, getPlatformSettings());
+        settingsCache.cacheSettings(SettingsSection.LOGGING, getLoggingSettings());
+        settingsCache.cacheSettings(SettingsSection.NOTIFICATIONS, getNotificationSettings());
+        settingsCache.cacheSettings(SettingsSection.AUTHENTICATION, getAuthenticationSettings(true));
     }
 
     @Override
@@ -50,7 +67,7 @@ public class SettingServiceImpl implements SettingService {
         PlatformSettingsDto platformSettings = new PlatformSettingsDto();
 
         // utils
-        Map<String, Setting> utilsSettings = mappedSettings.get("utils");
+        Map<String, Setting> utilsSettings = mappedSettings.get(SettingsSectionCategory.PLATFORM_UTILS.getCode());
         UtilsSettingsDto utilsSettingsDto = new UtilsSettingsDto();
         if (utilsSettings != null)
             utilsSettingsDto.setUtilsServiceUrl(utilsSettings.get(UTILS_SERVICE_URL_NAME).getValue());
@@ -67,25 +84,27 @@ public class SettingServiceImpl implements SettingService {
 
         // utils
         Setting setting = null;
-        Map<String, Setting> utilsSettings = mappedSettings.get("utils");
+        Map<String, Setting> utilsSettings = mappedSettings.get(SettingsSectionCategory.PLATFORM_UTILS.getCode());
         if (utilsSettings == null || (setting = utilsSettings.get(UTILS_SERVICE_URL_NAME)) == null) {
             setting = new Setting();
             setting.setSection(SettingsSection.PLATFORM);
-            setting.setCategory("utils");
+            setting.setCategory(SettingsSectionCategory.PLATFORM_UTILS.getCode());
             setting.setName(UTILS_SERVICE_URL_NAME);
         }
 
         setting.setValue(platformSettings.getUtils().getUtilsServiceUrl());
         settingRepository.save(setting);
+
+        settingsCache.cacheSettings(SettingsSection.PLATFORM, platformSettings);
     }
 
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
     public NotificationSettingsDto getNotificationSettings() {
         List<Setting> settings = settingRepository.findBySection(SettingsSection.NOTIFICATIONS);
-        Map<NotificationType, String> valueMapped = new HashMap<>();
+        Map<NotificationType, String> valueMapped = new EnumMap<>(NotificationType.class);
         if (!settings.isEmpty()) {
-            String valueJson = settings.get(0).getValue();
+            String valueJson = settings.getFirst().getValue();
             if (valueJson != null) {
                 TypeReference<Map<NotificationType, String>> typeReference = new TypeReference<>() {
                 };
@@ -93,7 +112,8 @@ public class SettingServiceImpl implements SettingService {
                 try {
                     valueMapped = objectMapper.readValue(valueJson, typeReference);
                 } catch (JsonProcessingException e) {
-                    throw new ValidationException("Could not convert JSON to value.");
+                    logger.warn("Cannot deserialize notification mapping settings. Returning empty mapping.");
+                    valueMapped = new EnumMap<>(NotificationType.class);
                 }
             }
         }
@@ -107,7 +127,6 @@ public class SettingServiceImpl implements SettingService {
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
     public void updateNotificationSettings(NotificationSettingsDto notificationSettings) {
-
         List<Setting> settings = settingRepository.findBySection(SettingsSection.NOTIFICATIONS);
         Setting setting;
         if (settings.isEmpty()) {
@@ -115,7 +134,7 @@ public class SettingServiceImpl implements SettingService {
             setting.setSection(SettingsSection.NOTIFICATIONS);
             setting.setName(NOTIFICATIONS_MAPPING_NAME);
         } else {
-            setting = settings.get(0);
+            setting = settings.getFirst();
         }
 
         Map<NotificationType, String> notificationTypeStringMap = notificationSettings.getNotificationsMapping();
@@ -129,23 +148,165 @@ public class SettingServiceImpl implements SettingService {
         try {
             setting.setValue(objectMapper.writeValueAsString(notificationTypeStringMap));
         } catch (JsonProcessingException e) {
-            throw new ValidationException("Could not convert JSON to value.");
+            throw new ValidationException("Cannot serialize notification mapping settings: " + e.getMessage());
         }
         settingRepository.save(setting);
+        settingsCache.cacheSettings(SettingsSection.NOTIFICATIONS, notificationSettings);
+
     }
 
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
-    public OAuth2ProviderSettings getOAuth2ProviderSettings(String providerName, boolean withClientSecret) {
-        List<Setting> settings = settingRepository.findByCategoryAndSectionAndName(OAUTH2_PROVIDER_CATEGORY, SettingsSection.AUTHENTICATION, providerName);
-        OAuth2ProviderSettings settingsDto = null;
-        if (!settings.isEmpty()) {
-            Setting setting = settings.getFirst();
+    public LoggingSettingsDto getLoggingSettings() {
+        LoggingSettingsDto loggingSettingsDto = new LoggingSettingsDto();
+        List<Setting> settings = settingRepository.findBySection(SettingsSection.LOGGING);
+        Map<String, Map<String, Setting>> mappedSettings = mapSettingsByCategory(settings);
+
+        // audit logging
+        Setting setting;
+        Map<String, Setting> auditLoggingSettings = mappedSettings.get(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+        AuditLoggingSettingsDto auditLoggingSettingsDto = new AuditLoggingSettingsDto();
+        if (auditLoggingSettings != null) {
+            if ((setting = auditLoggingSettings.get(LOGGING_AUDIT_LOG_OUTPUT_NAME)) != null) {
+                auditLoggingSettingsDto.setOutput(AuditLogOutput.valueOf(setting.getValue()));
+            }
+            if ((setting = auditLoggingSettings.get(LOGGING_RESOURCES_NAME)) != null) {
+                ResourceLoggingSettingsDto resources;
+                try {
+                    resources = mapper.readValue(setting.getValue(), ResourceLoggingSettingsDto.class);
+                } catch (JsonProcessingException e) {
+                    logger.warn("Cannot deserialize audit logs resource settings. Returning default settings.");
+                    resources = new ResourceLoggingSettingsDto();
+                }
+                auditLoggingSettingsDto.setResourceLogging(resources);
+            }
+        }
+        loggingSettingsDto.setAuditLogs(auditLoggingSettingsDto);
+
+        // event logging
+        Map<String, Setting> eventLoggingSettings = mappedSettings.get(SettingsSectionCategory.EVENT_LOGGING.getCode());
+        ResourceLoggingSettingsDto eventLoggingSettingsDto = new ResourceLoggingSettingsDto();
+        if (eventLoggingSettings != null && (setting = eventLoggingSettings.get(LOGGING_RESOURCES_NAME)) != null) {
+            ResourceLoggingSettingsDto resources;
             try {
-                settingsDto = objectMapper.readValue(setting.getValue(), OAuth2ProviderSettings.class);
+                resources = mapper.readValue(setting.getValue(), ResourceLoggingSettingsDto.class);
+            } catch (JsonProcessingException e) {
+                logger.warn("Cannot deserialize event logs resource settings. Returning default settings.");
+                resources = new ResourceLoggingSettingsDto();
+            }
+            eventLoggingSettingsDto = resources;
+        }
+        loggingSettingsDto.setEventLogs(eventLoggingSettingsDto);
+
+        return loggingSettingsDto;
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
+    public void updateLoggingSettings(LoggingSettingsDto loggingSettingsDto) {
+        List<Setting> settings = settingRepository.findBySection(SettingsSection.LOGGING);
+        Map<String, Map<String, Setting>> mappedSettings = mapSettingsByCategory(settings);
+
+        // audit logging
+        Setting setting;
+        Map<String, Setting> auditLoggingSettings = mappedSettings.get(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+        if (auditLoggingSettings == null || (setting = auditLoggingSettings.get(LOGGING_AUDIT_LOG_OUTPUT_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+            setting.setName(LOGGING_AUDIT_LOG_OUTPUT_NAME);
+        }
+        setting.setValue(loggingSettingsDto.getAuditLogs().getOutput().toString());
+        settingRepository.save(setting);
+
+        if (auditLoggingSettings == null || (setting = auditLoggingSettings.get(LOGGING_RESOURCES_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.AUDIT_LOGGING.getCode());
+            setting.setName(LOGGING_RESOURCES_NAME);
+        }
+        try {
+            setting.setValue(mapper.writeValueAsString(mapper.convertValue(loggingSettingsDto.getAuditLogs(), ResourceLoggingSettingsDto.class)));
+            settingRepository.save(setting);
+        } catch (JsonProcessingException e) {
+            throw new ValidationException("Cannot serialize audit logging resources settings: " + e.getMessage());
+        }
+
+        // event logging
+        Map<String, Setting> eventLoggingSettings = mappedSettings.get(SettingsSectionCategory.EVENT_LOGGING.getCode());
+        if (eventLoggingSettings == null || (setting = eventLoggingSettings.get(LOGGING_RESOURCES_NAME)) == null) {
+            setting = new Setting();
+            setting.setSection(SettingsSection.LOGGING);
+            setting.setCategory(SettingsSectionCategory.EVENT_LOGGING.getCode());
+            setting.setName(LOGGING_RESOURCES_NAME);
+        }
+        try {
+            setting.setValue(mapper.writeValueAsString(loggingSettingsDto.getEventLogs()));
+            settingRepository.save(setting);
+        } catch (JsonProcessingException e) {
+            throw new ValidationException("Cannot serialize event logging resources settings: " + e.getMessage());
+        }
+
+        settingsCache.cacheSettings(SettingsSection.LOGGING, loggingSettingsDto);
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
+    public AuthenticationSettingsDto getAuthenticationSettings(boolean withClientSecret) {
+        AuthenticationSettingsDto authenticationSettings = new AuthenticationSettingsDto();
+
+        List<Setting> oauth2ProviderSettings = settingRepository.findBySectionAndCategory(SettingsSection.AUTHENTICATION, SettingsSectionCategory.OAUTH2_PROVIDER.getCode());
+        for (Setting oauth2Provider : oauth2ProviderSettings) {
+            OAuth2ProviderSettingsDto oAuth2ProviderSettings;
+            try {
+                oAuth2ProviderSettings = objectMapper.readValue(oauth2Provider.getValue(), OAuth2ProviderSettingsDto.class);
+                if (!withClientSecret) oAuth2ProviderSettings.setClientSecret(null);
+            } catch (JsonProcessingException e) {
+                throw new ValidationException("Cannot deserialize OAuth2 Provider Settings for provider '%s'.".formatted(oauth2Provider.getName()));
+            }
+            authenticationSettings.getOAuth2Providers().put(oauth2Provider.getName(), oAuth2ProviderSettings);
+        }
+        Setting disableLocalhostSetting = settingRepository.findBySectionAndCategoryAndName(SettingsSection.AUTHENTICATION, null, AUTHENTICATION_DISABLE_LOCALHOST_NAME);
+        if (disableLocalhostSetting != null) {
+            authenticationSettings.setDisableLocalhostUser(Boolean.parseBoolean(disableLocalhostSetting.getValue()));
+        }
+
+        return authenticationSettings;
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
+    public void updateAuthenticationSettings(AuthenticationSettingsUpdateDto authenticationSettingsDto) {
+        Setting disableLocalhostSetting = settingRepository.findBySectionAndCategoryAndName(SettingsSection.AUTHENTICATION, null, AUTHENTICATION_DISABLE_LOCALHOST_NAME);
+        if (disableLocalhostSetting == null) {
+            disableLocalhostSetting = new Setting();
+            disableLocalhostSetting.setSection(SettingsSection.AUTHENTICATION);
+            disableLocalhostSetting.setName(AUTHENTICATION_DISABLE_LOCALHOST_NAME);
+        }
+        disableLocalhostSetting.setValue(String.valueOf(authenticationSettingsDto.isDisableLocalhostUser()));
+        settingRepository.save(disableLocalhostSetting);
+
+        if (authenticationSettingsDto.getOAuth2Providers() != null) {
+            settingRepository.deleteBySectionAndCategory(SettingsSection.AUTHENTICATION, SettingsSectionCategory.OAUTH2_PROVIDER.getCode());
+
+            for (OAuth2ProviderSettingsDto providerDto : authenticationSettingsDto.getOAuth2Providers()) {
+                updateOAuth2ProviderSettings(providerDto.getName(), providerDto);
+            }
+        }
+        settingsCache.cacheSettings(SettingsSection.AUTHENTICATION, getAuthenticationSettings(true));
+    }
+
+    @Override
+    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
+    public OAuth2ProviderSettingsDto getOAuth2ProviderSettings(String providerName, boolean withClientSecret) {
+        Setting setting = settingRepository.findBySectionAndCategoryAndName(SettingsSection.AUTHENTICATION, SettingsSectionCategory.OAUTH2_PROVIDER.getCode(), providerName);
+        OAuth2ProviderSettingsDto settingsDto = null;
+        if (setting != null) {
+            try {
+                settingsDto = objectMapper.readValue(setting.getValue(), OAuth2ProviderSettingsDto.class);
                 if (!withClientSecret) settingsDto.setClientSecret(null);
             } catch (JsonProcessingException e) {
-                throw new ValidationException("Unable to convert JSON value to OAuth2 Provider Settings object.");
+                throw new ValidationException("Cannot deserialize OAuth2 Provider Settings for provider '%s'.".formatted(providerName));
             }
         }
         return settingsDto;
@@ -153,76 +314,40 @@ public class SettingServiceImpl implements SettingService {
 
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
-    public void updateOAuth2ProviderSettings(String providerName, OAuth2ProviderSettings settingsDto) {
-
-        List<Setting> settingForRegistrationId = settingRepository.findByCategoryAndSectionAndName(OAUTH2_PROVIDER_CATEGORY, SettingsSection.AUTHENTICATION, providerName);
-        Setting setting = settingForRegistrationId.isEmpty() ? new Setting() : settingForRegistrationId.getFirst();
+    public void updateOAuth2ProviderSettings(String providerName, OAuth2ProviderSettingsDto settingsDto) {
+        Setting settingForRegistrationId = settingRepository.findBySectionAndCategoryAndName(SettingsSection.AUTHENTICATION, SettingsSectionCategory.OAUTH2_PROVIDER.getCode(), providerName);
+        Setting setting = settingForRegistrationId == null ? new Setting() : settingForRegistrationId;
+        setting.setSection(SettingsSection.AUTHENTICATION);
+        setting.setCategory(SettingsSectionCategory.OAUTH2_PROVIDER.getCode());
         setting.setName(providerName);
-        setting.setCategory(OAUTH2_PROVIDER_CATEGORY);
         settingsDto.setClientSecret(SecretsUtil.encryptAndEncodeSecretString(settingsDto.getClientSecret(), SecretEncodingVersion.V1));
         try {
             setting.setValue(objectMapper.writeValueAsString(settingsDto));
         } catch (JsonProcessingException e) {
-            throw new ValidationException("Unable to convert settings to JSON.");
+            throw new ValidationException("Cannot serialize OAuth2 provider settings for provider '%s'.".formatted(providerName));
         }
-        setting.setSection(SettingsSection.AUTHENTICATION);
         settingRepository.save(setting);
-    }
 
-    @Override
-    public List<String> listNamesOfOAuth2Providers() {
-        return settingRepository.findBySection(SettingsSection.AUTHENTICATION).stream().map(Setting::getName).toList();
-    }
-
-    @Override
-    public OAuth2ProviderSettings findOAuth2ProviderByIssuerUri(String issuerUri) {
-        Setting setting = settingRepository.findBySection(SettingsSection.AUTHENTICATION).stream()
-                .filter(s -> {
-                    try {
-                        return objectMapper.readValue(s.getValue(), OAuth2ProviderSettings.class).getIssuerUrl().equals(issuerUri);
-                    } catch (JsonProcessingException e) {
-                        return false;
-                    }
-                }).findFirst().orElse(null);
-        if (setting == null) return null;
-        try {
-            return objectMapper.readValue(setting.getValue(), OAuth2ProviderSettings.class);
-        } catch (JsonProcessingException e) {
-            throw new ValidationException("Could not process JSON value of OAuth2 Provider.");
-        }
+        settingsCache.cacheSettings(SettingsSection.AUTHENTICATION, getAuthenticationSettings(true));
     }
 
     @Override
     @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.UPDATE)
     public void removeOAuth2Provider(String providerName) {
-        List<Setting> settings = settingRepository.findByCategoryAndSectionAndName(OAUTH2_PROVIDER_CATEGORY, SettingsSection.AUTHENTICATION, providerName);
-        if (!settings.isEmpty()) settingRepository.delete(settings.getFirst());
-    }
-
-    @Override
-    @ExternalAuthorization(resource = Resource.SETTINGS, action = ResourceAction.DETAIL)
-    public List<OAuth2SettingsDto> listOAuth2Providers() {
-        List<String> providerNames = listNamesOfOAuth2Providers();
-        List<OAuth2SettingsDto> settingsDtoList = new ArrayList<>();
-        for (String providerName: providerNames) {
-            OAuth2SettingsDto settingsDto = new OAuth2SettingsDto();
-            settingsDto.setProviderName(providerName);
-            settingsDto.setOAuth2ProviderSettings(getOAuth2ProviderSettings(providerName, false));
-            settingsDtoList.add(settingsDto);
+        long deleted = settingRepository.deleteBySectionAndCategoryAndName(SettingsSection.AUTHENTICATION, SettingsSectionCategory.OAUTH2_PROVIDER.getCode(), providerName);
+        if (deleted > 0) {
+            settingsCache.cacheSettings(SettingsSection.AUTHENTICATION, getAuthenticationSettings(true));
         }
-        return settingsDtoList;
     }
 
     private Map<String, Map<String, Setting>> mapSettingsByCategory(List<Setting> settings) {
         var mapping = new HashMap<String, Map<String, Setting>>();
 
         for (Setting setting : settings) {
-            String category = setting.getCategory();
-            Map<String, Setting> categorySettings = mapping.computeIfAbsent(category, k -> new HashMap<>());
+            Map<String, Setting> categorySettings = mapping.computeIfAbsent(setting.getCategory(), k -> new HashMap<>());
             categorySettings.put(setting.getName(), setting);
         }
 
         return mapping;
     }
-
 }
